fix: video element overflow

--- a/resources/skins.citizen.styles/common/common.less
+++ b/resources/skins.citizen.styles/common/common.less
@@ -249,6 +249,10 @@ div.patrollink {
 	text-align: right;
 }
 
+video {
+	max-width: 100%; // Prevent overflow
+}
+
 .citizen-animations-ready {
 	html {
 		// So that the delay scroll animation won't happen on load
